--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -25,8 +25,13 @@
             <a href="/team" class="nav-item nav-link">Our Team</a>
             <a href="/contact" class="nav-item nav-link">Contact us </a>
         </div>
+        {% if not request.user.is_authenticated %}
         <a href="{% url 'account_login' %}" class="btn btn-primary py-2 px-4 ms-3">Sign in</a>
         <a href="{% url 'account_signup' %}" class="btn btn-primary py-2 px-4 ms-3">Sign Up</a>
+        {% else %}
+        <a href="{% url 'dashboard:index' %}" class="btn btn-primary py-2 px-4 ms-3">Dashboard</a>
+        <a href="{% url 'account_logout' %}" class="btn btn-danger py-2 px-4 ms-3">Logout</a>
+        {% endif %}
 
     </div>
 </nav>
