Feat: Move to contabo

--- a/templates/team1.html
+++ b/templates/team1.html
@@ -5,14 +5,14 @@
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.1s">
                 <div class="section-title bg-light rounded h-100 p-5">
                     <h5 class="position-relative d-inline-block text-primary text-uppercase">Our Team</h5>
-                    <h1 class="display-6 mb-4">Meet Our Certified & Experienced Team</h1>
-                    <a href="hms/registration.php" class="btn btn-primary py-3 px-5">Register with us</a>
+                    <h1 class="display-6 mb-4">Meet Our Certified Doctors and Team</h1>
+                    <a href="" class="btn btn-primary py-3 px-5">Register with us</a>
                 </div>
             </div>
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                 <div class="team-item">
                     <div class="position-relative rounded-top" style="z-index: 1;">
-                        <img class="img-fluid rounded-top w-100 object-cover top" src="/static/img/team 1.jpg" alt="">
+                        <img class="img-fluid rounded-top w-100 object-cover top" src="/static/img/team-1.jpg" alt="">
                         <div class="position-absolute top-100 start-50 translate-middle bg-light rounded p-2 d-flex">
                             <a class="btn btn-primary btn-square m-1" href="#"><i
                                     class="fab fa-twitter fw-normal"></i></a>
@@ -26,94 +26,11 @@
                     </div>
                     <div class="team-text position-relative bg-light text-center rounded-bottom p-4 pt-5">
                         <h4 class="mb-2">Mr HABYARIMANA Venquer</h4>
-                        <p class="text-primary mb-0">Team Manager</p>
+                        <p class="text-primary mb-0">CEO and FOunder</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="team-item">
-                    <div class="position-relative rounded-top" style="z-index: 1;">
-                        <img class="img-fluid rounded-top w-100" src="/static/img/team 1.jpg" alt="">
-                        <div class="position-absolute top-100 start-50 translate-middle bg-light rounded p-2 d-flex">
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-twitter fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-facebook-f fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-whatsapp fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-instagram fw-normal"></i></a>
-                        </div>
-                    </div>
-                    <div class="team-text position-relative bg-light text-center rounded-bottom p-4 pt-5">
-                        <h4 class="mb-2">Mr HABYARIMANA Venquer</h4>
-                        <p class="text-primary mb-0">Team Manager</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="team-item">
-                    <div class="position-relative rounded-top" style="z-index: 1;">
-                        <img class="img-fluid rounded-top w-100 object-cover" src="/static/img/team 1.jpg" alt="">
-                        <div class="position-absolute top-100 start-50 translate-middle bg-light rounded p-2 d-flex">
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-twitter fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-facebook-f fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-whatsapp fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-instagram fw-normal"></i></a>
-                        </div>
-                    </div>
-                    <div class="team-text position-relative bg-light text-center rounded-bottom p-4 pt-5">
-                        <h4 class="mb-2">Mr HABYARIMANA Venquer</h4>
-                        <p class="text-primary mb-0">Team Manager</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="team-item">
-                    <div class="position-relative rounded-top" style="z-index: 1;">
-                        <img class="img-fluid rounded-top w-100" src="img/team 1.jpg" alt="">
-                        <div class="position-absolute top-100 start-50 translate-middle bg-light rounded p-2 d-flex">
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-twitter fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-facebook-f fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-whatsapp fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-instagram fw-normal"></i></a>
-                        </div>
-                    </div>
-                    <div class="team-text position-relative bg-light text-center rounded-bottom p-4 pt-5">
-                        <h4 class="mb-2">Mr HABYARIMANA Venquer</h4>
-                        <p class="text-primary mb-0">Team Manager</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="team-item">
-                    <div class="position-relative rounded-top" style="z-index: 1;">
-                        <img class="img-fluid rounded-top w-100" src="img/team 1.jpg" alt="">
-                        <div class="position-absolute top-100 start-50 translate-middle bg-light rounded p-2 d-flex">
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-twitter fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-facebook-f fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-whatsapp fw-normal"></i></a>
-                            <a class="btn btn-primary btn-square m-1" href="#"><i
-                                    class="fab fa-instagram fw-normal"></i></a>
-                        </div>
-                    </div>
-                    <div class="team-text position-relative bg-light text-center rounded-bottom p-4 pt-5">
-                        <h4 class="mb-2">Mr HABYARIMANA Venquer</h4>
-                        <p class="text-primary mb-0">Team Manager</p>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
