--- a/templates/header.html
+++ b/templates/header.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <title>Digital Healthline Solution</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Digital Helathline Clinic provide advice and tools to manage non communicable diseases"
+        name="keywords">
+    <meta content="DHS Assists patient and hospitals in follow up and management of non communicable diseases."
+        name="description">
 
     <!-- Favicon -->
-    <link href="/static/img/favicon.ico" rel="icon">
+    <link href="/static/img/logo.jpeg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
